--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
 
 :root{
-    --green:#16a085;
-    --black:#444;
+    --red:#c52727;
+    --green:rgb(42, 141, 100);
     --light-color:#777;
     --box-shadow:.5rem .5rem 0 rgba(22, 160, 133, .2);
     --text-shadow:.4rem .4rem 0 rgba(0, 0, 0, .2);
-    --border:.2rem solid var(--green);
+    --border:.2rem solid var(--red);
 }
 
 *{
@@ -39,14 +39,14 @@ section:nth-child(even){
     padding-bottom: 2rem;
     text-shadow: var(--text-shadow);
     text-transform: uppercase;
-    color:var(--black);
+    color:var(--green);
     font-size: 5rem;
     letter-spacing: .4rem;
 }
 
 .heading span{
     text-transform: uppercase;
-    color:var(--green);
+    color:var(--red);
 }
 
 .btn{
@@ -57,7 +57,7 @@ section:nth-child(even){
     border:var(--border);
     border-radius: .5rem;
     box-shadow: var(--box-shadow);
-    color:var(--green);
+    color:var(--red);
     cursor: pointer;
     font-size: 1.7rem;
     background: #fff;
@@ -66,18 +66,18 @@ section:nth-child(even){
 .btn span{
     padding:.7rem 1rem;
     border-radius: .5rem;
-    background: var(--green);
+    background: var(--red);
     color:#fff;
     margin-left: .5rem;
 }
 
 .btn:hover{
-    background: var(--green);
+    background: var(--red);
     color:#fff;
 }
 
 .btn:hover span{
-    color: var(--green);
+    color: var(--red);
     background:#fff;
     margin-left: 1rem;
 }
@@ -96,11 +96,11 @@ section:nth-child(even){
 
 .header .logo{
     font-size: 2.5rem;
-    color: var(--black);
+    color: var(--green);
 }
 
 .header .logo i{
-    color: var(--green);
+    color: var(--red);
 }
 
 .header .navbar a{
@@ -110,14 +110,14 @@ section:nth-child(even){
 }
 
 .header .navbar a:hover{
-    color: var(--green);
+    color: var(--red);
 }
 
 #menu-btn{
     font-size: 2.5rem;
     border-radius: .5rem;
     background: #eee;
-    color:var(--green);
+    color:var(--red);
     padding: 1rem 1.5rem;
     cursor: pointer;
     display: none;
@@ -145,7 +145,7 @@ section:nth-child(even){
 
 .home .content h3{
     font-size: 4.5rem;
-    color:var(--black);
+    color:var(--green);
     line-height: 1.8;
     text-shadow: var(--text-shadow);
 }
@@ -175,13 +175,13 @@ section:nth-child(even){
 
 .icons-container .icons i{
     font-size: 4.5rem;
-    color:var(--green);
+    color:var(--red);
     padding-bottom: .7rem;
 }
 
 .icons-container .icons h3{
     font-size: 4.5rem;
-    color:var(--black);
+    color:var(--green);
     padding: .5rem 0;
     text-shadow: var(--text-shadow);
 }
@@ -206,13 +206,13 @@ section:nth-child(even){
 }
 
 .services .box-container .box i{
-    color: var(--green);
+    color: var(--red);
     font-size: 5rem;
     padding-bottom: .5rem;
 }
 
 .services .box-container .box h3{
-    color: var(--black);
+    color: var(--green);
     font-size: 2.5rem;
     padding:1rem 0;
 }
@@ -243,7 +243,7 @@ section:nth-child(even){
 }
 
 .about .row .content h3{
-    color: var(--black);
+    color: var(--green);
     text-shadow: var(--text-shadow);
     font-size: 4rem;
     line-height: 1.8;
@@ -280,12 +280,12 @@ section:nth-child(even){
 }
 
 .doctors .box-container .box h3{
-    color:var(--black);
+    color:var(--green);
     font-size: 2.5rem;
 }
 
 .doctors .box-container .box span{
-    color:var(--green);
+    color:var(--red);
     font-size: 1.5rem;
 }
 
@@ -298,14 +298,14 @@ section:nth-child(even){
     width: 5rem;
     line-height: 4.5rem;
     font-size: 2rem;
-    color:var(--green);
+    color:var(--red);
     border-radius: .5rem;
     border:var(--border);
     margin:.3rem;
 }
 
 .doctors .box-container .box .share a:hover{
-    background:var(--green);
+    background:var(--red);
     color:#fff;
     box-shadow: var(--box-shadow);
 }
@@ -336,7 +336,7 @@ section:nth-child(even){
 }
 
 .book .row form h3{
-    color:var(--black);
+    color:var(--green);
     padding-bottom: 1rem;
     font-size: 3rem;
 }
@@ -347,7 +347,7 @@ section:nth-child(even){
     border-radius: .5rem;
     border:var(--border);
     font-size: 1.6rem;
-    color: var(--black);
+    color: var(--green);
     text-transform: none;
     padding: 1rem;
 }
@@ -405,7 +405,7 @@ section:nth-child(even){
     position: absolute;
     top:-4rem; left: 50%;
     transform:translateX(-50%);
-    background:var(--green);
+    background:var(--red);
     border-bottom-left-radius: 50%;
     border-bottom-right-radius: 50%;
     height: 25rem;
@@ -459,16 +459,16 @@ section:nth-child(even){
 }
 
 .blogs .box-container .box .content .icon a:hover{
-    color:var(--green);
+    color:var(--red);
 }
 
 .blogs .box-container .box .content .icon a i{
     padding-right: .5rem;
-    color: var(--green);
+    color: var(--red);
 }
 
 .blogs .box-container .box .content h3{
-    color:var(--black);
+    color:var(--green);
     font-size: 3rem;
 }
 
@@ -487,7 +487,7 @@ section:nth-child(even){
 
 .footer .box-container .box h3{
     font-size: 2.5rem;
-    color:var(--black);
+    color:var(--green);
     padding: 1rem 0;
 }
 
@@ -500,7 +500,7 @@ section:nth-child(even){
 
 .footer .box-container .box a i{
     padding-right: .5rem;
-    color:var(--green);
+    color:var(--red);
 }
 
 .footer .box-container .box a:hover i{
@@ -518,7 +518,7 @@ section:nth-child(even){
 }
 
 .footer .credit span{
-    color:var(--green);
+    color:var(--red);
 }
 
 
