--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,10 @@ section{
 }
 
 section:nth-child(even){
-    background: #f5f5f5;
+    background: #fff6f6;
+}
+section:nth-child(odd){
+    background: #f5feff;
 }
 
 .heading{
@@ -198,7 +201,7 @@ section:nth-child(even){
 }
 
 .services .box-container .box{
-    background:#fff;
+    background:rgb(255, 255, 255);
     border-radius: .5rem;
     box-shadow: var(--box-shadow);
     border:var(--border);
