--- a/css/style.css
+++ b/css/style.css
@@ -347,6 +347,7 @@ section:nth-child(odd) {
     margin: .7rem 0;
     border-radius: .5rem;
     font-size: 1.6rem;
+    background: rgba(236, 236, 236, 0.589);
     color: var(--green);
     text-transform: none;
     padding: 1rem;
